Minor changes to the site

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -12,8 +12,8 @@
         <div>I am working on rousing the Hare community to get the word out about our work. I have drafted the Hare evangelism guidelines to this effect, which summarizes how we want to see our community bringing Hare to more people. We&rsquo;d like to spread the word in a way which is respectful of the attention of others &ndash; ...</div>
       </li>
       <li>
-        <div><a href="http://offbeatpursuit.com:80/blog/?id=26" target="_blank" rel="noopener">Learning all the wrong lessons</a> — WLOG - blog</div>
-        <div>tags: random, zig The time when some thought should be given to something other than just random projects is approaching. For whom does the sysbell rings? So why not sharpen the brain with a simple exercise? A “cold open” so to speak. A quick “hello” run through the current popular (and STRONGLY recommended) system pro...</div>
+        <div><a href="http://offbeatpursuit.com:80/blog/?id=27" target="_blank" rel="noopener">I just think this is neat</a> — WLOG - blog</div>
+        <div>tags: plan9, random, zig Nothing profound here. But sometimes the internet collective can still be surprising. Apparently, you can already cross-compile Zig (at least the basic stuff) for plan9. Now this is fun! Also, a note to self more than anything: while zig itself is simple and quick to take in, the built-in build...</div>
       </li>
       <li>
         <div><a href="https://mirzapandzo.com/next-image-url-parameter-is-valid-but-upstream-response-is-invalid" target="_blank" rel="noopener">Next/Image &quot;url&quot; parameter is valid but upstream response is invalid</a> — Mirza Pandzo&apos;s Blog</div>
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/tech/BackupSystemsStorageFormatDivide" target="_blank" rel="noopener">Backup systems and how much they do or don&#39;t know about storage formats</a> — Chris&#39;s Wiki :: blog</div>
-        <div>One of the divides in large scale systems for handling backups is whether they have their own custom storage format (or formats) for backups, or whether they rely on outside tools to create what I'll call 'backup blobs' that the backup system then manages. This division is fractal, because sometimes what you're backing...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/AmandaReadsTarRestoresToEndII" target="_blank" rel="noopener">Amanda has clever restores from tar archives (sometimes)</a> — Chris&#39;s Wiki :: blog</div>
+        <div>Yesterday I wrote an entry about how the Amanda backup system reads all the way through tar archives on restores. Except, it turns out, this is only partially true, because under some circumstances Amanda will thoroughly optimize restores from tar archives (and possibly other archive formats). When everything is lined ...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
