--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,8 +17,10 @@
 
 	  <style>
       :root {
+        --body-max-width: 1100px;
         --border-color: gainsboro;
-        --border-size: 2px;
+        --border-size: 1px;
+        --border-style: solid;
         --link-color: blue;
         --bg-color: #eee;
       }
@@ -40,7 +42,7 @@
 
 	    body {
         padding: 2.5rem;
-        max-width: 1900px;
+        max-width: var(--body-max-width);
         background: white;
 		    font-family: sans-serif;
         line-height: 1.4rem;
@@ -49,8 +51,9 @@
 
 	    hr {
         border: 0;
-        border-bottom: var(--border-size) solid var(--border-color);
+        border-bottom: var(--border-size) var(--border-style) var(--border-color);
 		    margin-block-start: 1.5rem;
+		    margin-block-end: 1.5rem;
 	    }
 
       a {
@@ -80,13 +83,13 @@
 
       table {
         max-width: 100%;
-        border: var(--border-size) solid var(--border-color);
+        border: var(--border-size) var(--border-style) var(--border-color);
         border-collapse: separate;
         border-spacing: 0;
 	    }
 
       table thead tr th {
-        border-bottom: var(--border-size) solid var(--border-color);
+        border-bottom: var(--border-size) var(--border-style) var(--border-color);
         text-align: left;
       }
 
@@ -106,7 +109,7 @@
         text-wrap: nowrap;
         overflow-x: auto;
 		    padding: 1em;
-		    border: var(--border-size) solid var(--border-color);
+		    border: var(--border-size) var(--border-style) var(--border-color);
 	    }
 
       code {
@@ -138,8 +141,6 @@
 	    img, video, audio {
 		    width: 800px;
 		    max-width: 100%;
-        border: var(--border-size) solid var(--border-color);
-        padding: 0.5em;
 	    }
 
       header nav {
@@ -211,11 +212,6 @@
 		    a {
 			    word-wrap: break-word;
 		    }
-
-        img, video, audio {
-          border: 0;
-          padding: 0em;
-	      }
 	    }
 	  </style>
   </head>
