Fixed footer text

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -241,9 +241,7 @@
 		    catch up with me <a href="https://telegram.me/mitjafelicijan" target="_blank">on Telegram</a>.
 	    </p>
 	    <hr>
-	    <p>This website does not track you. Content is made available under the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless
-		    specified otherwise. Blog is also available as <a href="/feed.xml" target="_blank">RSS feed</a>.
-	    </p>
+      <p>This page's most recent build occurred on  {{ site.time | date: "%A, %-d %B, %Y" }} and is also available as <a href="/feed.xml" target="_blank">RSS feed</a>. </p>
 	  </footer>
   </body>
 </html>
