Fixed footer text

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -241,7 +241,7 @@
 		    catch up with me <a href="https://telegram.me/mitjafelicijan" target="_blank">on Telegram</a>.
 	    </p>
 	    <hr>
-      <p>This page's most recent build occurred on  {{ site.time | date: "%A, %-d %B, %Y" }} and is also available as <a href="/feed.xml" target="_blank">RSS feed</a>. </p>
+      <p><small>This page's most recent build occurred on  {{ site.time | date: "%A, %-d %B, %Y" }} and is also available as <a href="/feed.xml" target="_blank">RSS feed</a>.</small></p>
 	  </footer>
   </body>
 </html>
