--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/python/DjangoDBMigrationWentOkay" target="_blank" rel="noopener">My first Django database migration worked fine</a> — Chris&#39;s Wiki :: blog</div>
-        <div>We have a long standing Django application, using SQLite as the database layer because that's easy and all we need at our tiny scale. For as long as we've had the application I've not so much as breathed on its database schema (which is to say its model), because the thought of trying to do any sort of database migrati...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/python/ArgparseEncouragesOptions" target="_blank" rel="noopener">Using argparse in my Python programs encourages me to add options to them</a> — Chris&#39;s Wiki :: blog</div>
+        <div>Today, for reasons outside the scope of this entry, I updated one of my very old little Python utilities to add some features and move it to Python 3 in the process. This program was so old it was using getopt, so as part of updating it I switched it over to argparse, which is what I use in all of my modern programs. T...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
