--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -4,12 +4,12 @@
         <div>In its original form, a peephole optimization applied to a collection of instructions located close together in a program. For example, in a register transfer language we might find this sequence of instructions: r0 = xor r8, -1 r1 = xor r9, -1 r0 = and r0, r1 Here, assuming the two’s complement representation, -1 […]</div>
       </li>
       <li>
-        <div><a href="https://www.neilhenning.dev/posts/how-long-to-compile-llvm-17-on-rpi/" target="_blank" rel="noopener">How long does it take to compile LLVM 17 on a Raspberry PI 4</a> — Neil Henning</div>
-        <div>With the imminent launch of the Raspberry Pi 5 I wondered - how long does it take to compile the latest LLVM release (17 at the time of writing this blog) on the Raspberry Pi 4. This will give me a baseline that I can test the Raspberry Pi 5 against once I get ahold of it. For my initial exploration I decided to test j...</div>
+        <div><a href="https://www.neilhenning.dev/posts/how-long-to-compile-llvm-17-on-rpi5/" target="_blank" rel="noopener">How long does it take to compile LLVM 17 on a Raspberry PI 5</a> — Neil Henning</div>
+        <div>So I got my Raspberry PI 5. And like in my previous post, I compiled LLVM 17 on the Raspberry PI 5, and have compared the compile speed versus the Raspberry PI 4. I’m going to do the same steps: Compile LLVM using the default clang got via apt-get. Compile LLVM again using the clang we just built. And compile it a thir...</div>
       </li>
       <li>
-        <div><a href="https://drewdevault.com/2023/11/09/Can-I-be-on-your-podcast.html" target="_blank" rel="noopener">Can I be on your podcast?</a> — Drew DeVault's blog</div>
-        <div>I am working on rousing the Hare community to get the word out about our work. I have drafted the Hare evangelism guidelines to this effect, which summarizes how we want to see our community bringing Hare to more people. We&rsquo;d like to spread the word in a way which is respectful of the attention of others &ndash; ...</div>
+        <div><a href="https://drewdevault.com/2023/11/25/2023-11-26-RMS-on-sex.html" target="_blank" rel="noopener">Richard Stallman&#39;s political discourse on sex</a> — Drew DeVault's blog</div>
+        <div>Richard Stallman, the founder of the Free Software Foundation, has been subject to numerous allegations of misconduct. He stepped down in 2019, and following his re-instatement in 2021, a famous open letter was published in which numerous organizations and individuals from throughout the Free Software ecosystem called ...</div>
       </li>
       <li>
         <div><a href="http://offbeatpursuit.com:80/blog/?id=27" target="_blank" rel="noopener">I just think this is neat</a> — WLOG - blog</div>
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/linux/ModernProxyIPv6AndARP" target="_blank" rel="noopener">Modern proxy (IPv4) ARP and proxy IPv6 NDP on Linux</a> — Chris&#39;s Wiki :: blog</div>
-        <div>Suppose, not hypothetically, that you have a remote system (on the other side of some tunnel or other connection) that wants to pretend to be on the local network, for either or both of IPv4 and IPv6. To make this work smoothly, this remote system's gateway (on the local network) needs to answer ARP requests for this r...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/tech/MailClientsAndCreatingHTMLMail" target="_blank" rel="noopener">The quietly impressive thing mail clients do when you write HTML mail</a> — Chris&#39;s Wiki :: blog</div>
+        <div>It's not news that a great deal of email in the world today is written in HTML, and has been for some time. If you insist on plain text email, you're increasingly an anachronism. Many people writing email probably don't even think about people who prefer plain text, and I think many mail clients will default to HTML ev...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
