Updated webring content

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/tech/MailClientsAndCreatingHTMLMail" target="_blank" rel="noopener">The quietly impressive thing mail clients do when you write HTML mail</a> — Chris&#39;s Wiki :: blog</div>
-        <div>It's not news that a great deal of email in the world today is written in HTML, and has been for some time. If you insist on plain text email, you're increasingly an anachronism. Many people writing email probably don't even think about people who prefer plain text, and I think many mail clients will default to HTML ev...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/UsingBindNowForResolvers" target="_blank" rel="noopener">We&#39;ve switched (back) to using Bind for our local DNS resolvers</a> — Chris&#39;s Wiki :: blog</div>
+        <div>As part of our local network environment, we have some local DNS resolvers that people here use (or at least are supposed to use). These resolvers handle multiple jobs; they resolve our own normal DNS names (or some of them), our internal only DNS names, and handle all of the recursion for lookups for external names. O...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
