--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -214,6 +214,7 @@
 		    }
 	    }
 	  </style>
+		<script defer src="https://app.tinyanalytics.io/pixel/isfRNEahfHiS2Ttp"></script>
   </head>
   <body>
 
