--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/UsingBindNowForResolvers" target="_blank" rel="noopener">We&#39;ve switched (back) to using Bind for our local DNS resolvers</a> — Chris&#39;s Wiki :: blog</div>
-        <div>As part of our local network environment, we have some local DNS resolvers that people here use (or at least are supposed to use). These resolvers handle multiple jobs; they resolve our own normal DNS names (or some of them), our internal only DNS names, and handle all of the recursion for lookups for external names. O...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/linux/GrubUnknownFilesystemWhy" target="_blank" rel="noopener">Why grub-install can give you an &quot;unknown filesystem&quot; error</a> — Chris&#39;s Wiki :: blog</div>
+        <div>Over on the Fediverse, I said something: I hope that the Grub developers will someday fix grub-install so that the "unknown filesystem" error is replaced with a better one, like "Grub doesn't have the driver(s) necessary to use your / (or /boot) filesystem" or even "Grub doesn't currently support some filesystem featur...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
