Updated webring content

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -8,8 +8,8 @@
         <div>So I got my Raspberry PI 5. And like in my previous post, I compiled LLVM 17 on the Raspberry PI 5, and have compared the compile speed versus the Raspberry PI 4. I’m going to do the same steps: Compile LLVM using the default clang got via apt-get. Compile LLVM again using the clang we just built. And compile it a thir...</div>
       </li>
       <li>
-        <div><a href="https://drewdevault.com/2023/11/25/2023-11-26-RMS-on-sex.html" target="_blank" rel="noopener">Richard Stallman&#39;s political discourse on sex</a> — Drew DeVault's blog</div>
-        <div>Richard Stallman, the founder of the Free Software Foundation, has been subject to numerous allegations of misconduct. He stepped down in 2019, and following his re-instatement in 2021, a famous open letter was published in which numerous organizations and individuals from throughout the Free Software ecosystem called ...</div>
+        <div><a href="https://drewdevault.com/2023/12/26/2023-12-26-Prusa-is-floundering.html" target="_blank" rel="noopener">Why Prusa is floundering, and how you can avoid their fate</a> — Drew DeVault's blog</div>
+        <div>Prusa is a 3D printer manufacturer which has a long history of being admired by the 3D printing community for high quality, open source printers. They have been struggling as of late, and came under criticism for making the firmware of their Mk4 printer non-free.1 Armin Ronacher uses Prusa as a case-study in why open s...</div>
       </li>
       <li>
         <div><a href="http://offbeatpursuit.com:80/blog/?id=27" target="_blank" rel="noopener">I just think this is neat</a> — WLOG - blog</div>
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/linux/GrubUnknownFilesystemWhy" target="_blank" rel="noopener">Why grub-install can give you an &quot;unknown filesystem&quot; error</a> — Chris&#39;s Wiki :: blog</div>
-        <div>Over on the Fediverse, I said something: I hope that the Grub developers will someday fix grub-install so that the "unknown filesystem" error is replaced with a better one, like "Grub doesn't have the driver(s) necessary to use your / (or /boot) filesystem" or even "Grub doesn't currently support some filesystem featur...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/EnvironmentsAndImmitations" target="_blank" rel="noopener">Maybe learning to let new environments be themselves (more or less)</a> — Chris&#39;s Wiki :: blog</div>
+        <div>I've been using exmh to read and handle my email for what is now a very long time, and I'm completely used to its specific features and behaviors. Or rather that was true until very recently, when for reasons beyond the scope of this entry I switched more or less completely away from exmh to MH-E in GNU Emacs. Me being...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
