--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -116,6 +116,7 @@
         font-family: monospace;
         background: var(--bg-color);
         font-size: 14px;
+        padding: 2px 5px;
       }
 
       pre code {
@@ -159,7 +160,6 @@
       .highlight .hll { background-color: #ffffcc }
       .highlight  { background: #ffffff; }
       .highlight .c { color: #008000 } /* Comment */
-      /* .highlight .err { border: 1px solid #FF0000 } /* Error */ */
       .highlight .k { color: #0000ff } /* Keyword */
       .highlight .ch { color: #008000 } /* Comment.Hashbang */
       .highlight .cm { color: #008000 } /* Comment.Multiline */
