Updated webring content

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -4,20 +4,20 @@
         <div>In its original form, a peephole optimization applied to a collection of instructions located close together in a program. For example, in a register transfer language we might find this sequence of instructions: r0 = xor r8, -1 r1 = xor r9, -1 r0 = and r0, r1 Here, assuming the two’s complement representation, -1 […]</div>
       </li>
       <li>
-        <div><a href="https://www.neilhenning.dev/posts/how-long-to-compile-llvm-17-on-rpi5/" target="_blank" rel="noopener">How long does it take to compile LLVM 17 on a Raspberry PI 5</a> — Neil Henning</div>
-        <div>So I got my Raspberry PI 5. And like in my previous post, I compiled LLVM 17 on the Raspberry PI 5, and have compared the compile speed versus the Raspberry PI 4. I’m going to do the same steps: Compile LLVM using the default clang got via apt-get. Compile LLVM again using the clang we just built. And compile it a thir...</div>
+        <div><a href="https://www.neilhenning.dev/posts/github-apple-silicon/" target="_blank" rel="noopener">Updating GitHub repos to Apple Silicon</a> — Neil Henning</div>
+        <div>I’ve updated my C/C++ open sources libraries utest.h, utf8.h, ubench.h, hashmap.h, subprocess.h, and json.h to use the new Apple Silicon GitHub CI runners. So how hard is it? Simple! You just add macos-14 to the build -> strategy -> matrix. I took the opportunity to drop macos-latest (which is still set to macos-13, th...</div>
       </li>
       <li>
         <div><a href="https://drewdevault.com/2023/12/26/2023-12-26-Prusa-is-floundering.html" target="_blank" rel="noopener">Why Prusa is floundering, and how you can avoid their fate</a> — Drew DeVault's blog</div>
         <div>Prusa is a 3D printer manufacturer which has a long history of being admired by the 3D printing community for high quality, open source printers. They have been struggling as of late, and came under criticism for making the firmware of their Mk4 printer non-free.1 Armin Ronacher uses Prusa as a case-study in why open s...</div>
       </li>
       <li>
-        <div><a href="http://offbeatpursuit.com:80/blog/?id=27" target="_blank" rel="noopener">I just think this is neat</a> — WLOG - blog</div>
-        <div>tags: plan9, random, zig Nothing profound here. But sometimes the internet collective can still be surprising. Apparently, you can already cross-compile Zig (at least the basic stuff) for plan9. Now this is fun! Also, a note to self more than anything: while zig itself is simple and quick to take in, the built-in build...</div>
+        <div><a href="http://offbeatpursuit.com:80/blog/?id=31" target="_blank" rel="noopener">Sometimes you just have to</a> — WLOG - blog</div>
+        <div>tags: random Continuing the previously discussed topic, of daring to be stupid for the sake of learning, sometimes you just have to do something for the sake of doing something. So why not a fictional calendar with 17 months, with names based on subatomic particles? Why? Why not? And while we’re at it, let’s try out so...</div>
       </li>
       <li>
-        <div><a href="https://mirzapandzo.com/next-image-url-parameter-is-valid-but-upstream-response-is-invalid" target="_blank" rel="noopener">Next/Image &quot;url&quot; parameter is valid but upstream response is invalid</a> — Mirza Pandzo&apos;s Blog</div>
-        <div>Getting "url" parameter is valid but upstream response is invalid error with Next/Image on WSL2</div>
+        <div><a href="https://mirzapandzo.com/woocommerce-blocks-and-cart-and-order-item-name-filters-problems" target="_blank" rel="noopener">WooCommerce blocks and woocommerce_order_item_name and woocommerce_cart_item_name filter problems</a> — Mirza Pandzo&apos;s Blog</div>
+        <div>Missing filters for cart and order item name in WooCommerce blocks</div>
       </li>
       <li>
         <div><a href="https://journal.valeriansaliou.name/deploy-a-nomad-cluster-on-alpine-linux-with-vultr/" target="_blank" rel="noopener">Deploy a Nomad Cluster on Alpine Linux with Vultr</a> — Valerian Saliou</div>
@@ -28,15 +28,15 @@
         <div>Accounting is fundamental to starting a business. You need to have a basic understanding of accounting principles and essential bookkeeping. I had to learn it. There was no choice. For filing taxes, your CPA is going to ask you for an Income Statement (also known as P/L statement). If</div>
       </li>
       <li>
-        <div><a href="https://michael.stapelberg.ch/posts/2023-10-25-my-all-flash-zfs-network-storage-build/" target="_blank" rel="noopener">My 2023 all-flash ZFS NAS (Network Storage) build</a> — Michael Stapelbergs Website</div>
-        <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
+        <div><a href="https://michael.stapelberg.ch/posts/2024-01-17-systemd-indefinite-service-restarts/" target="_blank" rel="noopener">systemd: enable indefinite service restarts</a> — Michael Stapelbergs Website</div>
+        <div>When a service fails to start up enough times in a row, systemd gives up on it. On servers, this isn’t what I want — in general it’s helpful for automated recovery if daemons are restarted indefinitely. As long as you don’t have circular dependencies between services, all your services will eventually come up after tra...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/EnvironmentsAndImmitations" target="_blank" rel="noopener">Maybe learning to let new environments be themselves (more or less)</a> — Chris&#39;s Wiki :: blog</div>
-        <div>I've been using exmh to read and handle my email for what is now a very long time, and I'm completely used to its specific features and behaviors. Or rather that was true until very recently, when for reasons beyond the scope of this entry I switched more or less completely away from exmh to MH-E in GNU Emacs. Me being...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/TrackingMachineImportance" target="_blank" rel="noopener">We might want to regularly keep track of how important each server is</a> — Chris&#39;s Wiki :: blog</div>
+        <div>Today we had a significant machine room air conditioning failure in our main machine room, one that certainly couldn't be fixed on the spot ('glycol all over the roof' is not a phrase you really want to hear about your AC's chiller). To keep the machine room's temperature down, we had to power off as many machines as p...</div>
       </li>
       <li>
-        <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
-        <div>This article documents my learnings from designing and building a DIY Pen Plotter during the summer of 2023. My ultimate goal is to build my…</div>
+        <div><a href="https://szymonkaliski.com/newsletter/2024-01-01-q4-2023/" target="_blank" rel="noopener">Q4 2023 — Improving Replit's Console and a Database-y Creative Coding Environment</a> — Szymon Kaliski</div>
+        <div>Hi, happy New Year! Tinyletter had an "incredible journey" moment recently, so if you're subscribed, you're receiving this through…</div>
       </li>
 </ul>
