--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -32,8 +32,8 @@
         <div>When a service fails to start up enough times in a row, systemd gives up on it. On servers, this isn’t what I want — in general it’s helpful for automated recovery if daemons are restarted indefinitely. As long as you don’t have circular dependencies between services, all your services will eventually come up after tra...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/TrackingMachineImportance" target="_blank" rel="noopener">We might want to regularly keep track of how important each server is</a> — Chris&#39;s Wiki :: blog</div>
-        <div>Today we had a significant machine room air conditioning failure in our main machine room, one that certainly couldn't be fixed on the spot ('glycol all over the roof' is not a phrase you really want to hear about your AC's chiller). To keep the machine room's temperature down, we had to power off as many machines as p...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/linux/MyMachineDesires2024" target="_blank" rel="noopener">What I&#39;d like in a hypothetical new desktop machine in 2024</a> — Chris&#39;s Wiki :: blog</div>
+        <div>My current work desktop and home desktop are getting somewhat long in the tooth, which has caused me to periodically think about what I'd want in new hardware for them. Sometimes I even look at potential hardware choices for such a replacement desktop (which can lead to grumbling). Today I want to write down my ideal b...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/newsletter/2024-01-01-q4-2023/" target="_blank" rel="noopener">Q4 2023 — Improving Replit's Console and a Database-y Creative Coding Environment</a> — Szymon Kaliski</div>
