--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -110,6 +110,7 @@
         overflow-x: auto;
         padding: 1em;
         border: var(--border-size) var(--border-style) var(--border-color);
+        border-radius: 3px;
       }
 
       code {
@@ -121,6 +122,7 @@
 
       pre code {
         background: transparent;
+        padding: initial;
       }
 
       figure {
@@ -142,6 +144,7 @@
       img, video, audio {
         width: 800px;
         max-width: 100%;
+        border-radius: 3px;
       }
 
       header nav {
@@ -154,7 +157,7 @@
       }
 
       audio::-webkit-media-controls-enclosure {
-        border-radius: 0;
+        border-radius: 3px;
       }
 
       .highlight .hll { background-color: #ffffcc }
