Removed rounded corners

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -114,7 +114,6 @@
         overflow-x: auto;
         padding: 1em;
         border: var(--border-size) var(--border-style) var(--border-color);
-        border-radius: 3px;
       }
 
       code {
@@ -148,7 +147,6 @@
       img, video, audio {
         width: 800px;
         max-width: 100%;
-        border-radius: 3px;
       }
 
       header nav {
@@ -160,9 +158,7 @@
         margin: 0!important;
       }
 
-      audio::-webkit-media-controls-enclosure {
-        border-radius: 3px;
-      }
+      audio::-webkit-media-controls-enclosure { }
 
       .highlight .hll { background-color: #ffffcc }
       .highlight  { background: #ffffff; }
