Added newsboat RSS subscriptions

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -227,6 +227,7 @@
         <a href="/vault.html">Vault</a>
         <a href="https://github.com/mitjafelicijan" target="_blank">Code</a>
         <a href="/assets/mitjafelicijan.pgp.pub.txt" target="_blank" class="hob">PGP</a>
+        <a href="/assets/urls.txt" target="_blank" class="hob">Newsboat</a>
         <a href="/curriculum-vitae.html">CV</a>
         <a href="/feed.xml" target="_blank" class="hob">RSS</a>
       </nav>
