--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -158,7 +158,9 @@
         margin: 0!important;
       }
 
-      audio::-webkit-media-controls-enclosure { }
+      audio::-webkit-media-controls-enclosure {
+        border-radius: 0;
+      }
 
       .highlight .hll { background-color: #ffffcc }
       .highlight  { background: #ffffff; }
