Testing thoughts page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -226,6 +226,7 @@
     <header>
       <nav class="main" itemscope itemtype="http://schema.org/SiteNavigationElement" role="navigation" aria-label="Main navigation">
         <a href="/">Home</a>
+        <a href="/thoughts.html">Thoughts</a>
         <a href="/vault.html">Vault</a>
         <a href="https://github.com/mitjafelicijan" target="_blank">Code</a>
         <a href="/assets/mitjafelicijan.pgp.pub.txt" target="_blank" class="hob">PGP</a>
