--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,6 +14,7 @@
     {% seo title=false %}
 
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="/feed.xml">
+    <link rel="alternate" type="application/json" title="{{ site.title | escape }}" href="/feed.json" />
 
     <style>
       :root {
@@ -47,7 +48,7 @@
         font-family: sans-serif;
         line-height: 1.4rem;
         font-size: 16px;
-        margin: 0 auto;
+        /* margin: 0 auto; */
       }
 
       hr {
