Added jbmafp to the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -159,7 +159,12 @@
         catch up with me <a href="https://telegram.me/mitjafelicijan" target="_blank">on Telegram</a>.
       </p>
       <hr>
-      <p><small>This page's is also available as <a href="/feed.xml" target="_blank">RSS feed</a>.</small></p>
+      <p>
+        <small>
+          This page's is also available as <a href="/feed.xml" target="_blank">RSS feed</a>.
+          Page was built with <a href="https://github.com/mitjafelicijan/jbmafp" target="_blank">jbmafp</a>.
+        </small>
+      </p>
     </footer>
   </body>
 </html>
