--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,15 @@
       cap { text-transform: capitalize; }
       ul li { padding: 0.2em 0; }
 
+      a {
+        color: var(--link-color);
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
       pre {
         text-wrap: nowrap;
         overflow-x: auto;
