--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
       }
 
       pre code {
-        background: transparent;
+        background: transparent!important;
         padding: initial;
       }
 
