--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,15 @@
       }
 
       pre { margin-block-start: 1em; margin-block-end: 1em; }
-      table { width: 100%; border: 1px solid gainsboro; border-collapse: separate; border-spacing: 0; }
+      
+      table {
+        width: 100%;
+        border: 1px solid gainsboro;
+        border-collapse: separate;
+        border-spacing: 0;
+        word-break: break-all;
+      }
+      
       table th { border-bottom: 1px solid gainsboro; background: #efefef; }
       table td, table th { padding: 0.3em 0.8em; text-align: left; }
 
