--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
         word-break: break-all;
       }
       
-      table th { border-bottom: 1px solid gainsboro; background: #efefef; }
+      table th { border-bottom: 1px solid gainsboro; background: var(--code-background); }
       table td, table th { padding: 0.3em 0.8em; text-align: left; }
 
       .promobox {        
