--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@
         overflow-x: auto;
         padding: 1em;
         background: var(--code-background)!important;
+        border: 1px solid #dcdcdc;
       }
 
       code {
@@ -88,6 +89,7 @@
       pre code {
         background: transparent!important;
         padding: initial;
+        border: none;
       }
 
       figure {
