--- a/templates/post.html
+++ b/templates/post.html
@@ -11,4 +11,10 @@
     {{ .Page.HTML }}
   </div>
 </section>
+
+{{ if .Page.Meta.mathjax }}
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js" async></script>
+{{ end }}
+
 {{ end }}
