--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,8 @@
 
       code {
         font-family: monospace;
-        font-size: 14px;
-        padding: 2px 5px;
+        font-size: 13px;
+        padding: 2px 4px;
         background: var(--inline-code-background)!important;
       }
 
@@ -105,6 +105,7 @@
       }
 
       img, video, audio, table {
+        width: 800px;
         max-width: 100%;
       }
 
