--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
         padding: 1rem;
         background: white;
         line-height: 1.3;
+        font-family: sans-serif;
       }
 
       header nav {
