--- a/templates/base.html
+++ b/templates/base.html
@@ -182,9 +182,7 @@
     </footer>
 
     <script>
-      document.querySelectorAll("table").forEach(table => {
-        table.setAttribute("border", 1);
-      });
+      document.querySelectorAll("table").forEach(t => t.setAttribute("border", 1));
     </script>
   </body>
 </html>
