--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,13 @@
         background: white;
         line-height: 1.3;
         font-family: sans-serif;
+        max-width: 760px;
+        margin: 0 auto;
       }
+
+      main { margin-bottom: 2em; }
+
+      header { margin-bottom: 1em; }
 
       header nav {
         display: flex;
@@ -123,7 +129,6 @@
       .promobox {        
         margin-top: 1em;
         text-decoration: none;
-        max-width: 650px;
         display: inline-block;
         background: blue;
         color: white;
@@ -159,8 +164,6 @@
         <a href="/feed.xml">RSS</a>
       </nav>
     </header>
-
-    <hr>
     
     <main>{{ block "content" . }}{{ end }}</main>
     
