--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {{ define "content" }}
 <section>
-  <mark><i>You do not learn by relaxing. You learn by violently assaulting your problem until it surrenders its mysteries to you.</i></mark>
+  <mark><small><i>You do not learn by relaxing. You learn by violently assaulting your problem until it surrenders its mysteries to you.</i></small></mark>
 </section>
 
 <a class="promobox" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
