Added mobile responsive tables

--- a/templates/base.html
+++ b/templates/base.html
@@ -148,6 +148,12 @@
         a {
           word-wrap: break-word;
         }
+
+        /* Responsive tables */
+        table {
+          display: block;
+          overflow-y: auto;
+        }
       }
     </style>
     <script defer src="https://app.tinyanalytics.io/pixel/isfRNEahfHiS2Ttp"></script>
