--- a/templates/base.html
+++ b/templates/base.html
@@ -197,6 +197,9 @@
       </p>
     </footer>
 
+{{ if .Page.Meta.mathjax }}
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js" async></script>
+{{ end }}
     <script>
       document.querySelectorAll("table").forEach(t => t.setAttribute("border", 1));
     </script>
