--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 
 <a class="promobox" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
   Examine graphical representations of binary files using diagrams that
-  illustrate connections between pairs of bytes (digraphs) and triplets
-  of bytes (trigraphs).
+  illustrate connections between pairs of bytes (digraphs) and triplets of
+  bytes (trigraphs).
 </a>
 
 <section>
