--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,10 @@
         font-family: sans-serif;
         max-width: 760px;
         margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
       }
-
-      main { margin-bottom: 1em; }
-
-      header { margin-bottom: 1em; }
 
       header nav {
         display: flex;
