Added tags to notes

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
         font-size: xx-large;
       }
 
+      mark { padding: 0 0.3em; background-color: chartreuse; }
       cap { text-transform: capitalize; }
       ul li { padding: 0.1em 0; }
 
@@ -171,7 +172,7 @@
         <a href="/">Home</a>
         <a href="https://github.com/mitjafelicijan" target="_blank">Code</a>
         <a href="/assets/mitjafelicijan.pgp.pub.txt">PGP</a>
-        <a href="/assets/urls.txt">Newsboat</a>
+        <a href="/assets/urls.txt">Blogroll</a>
         <a href="/curriculum-vitae.html">CV</a>
         <a href="/feed.xml">RSS</a>
       </nav>
