--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,12 @@
     <meta itemprop="name" content="Notes?! Maybe useful">
     {{ range .Pages }}
       {{ if and (eq .Type "note") (not .Draft) }}
-        <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+        <li>
+          {{ range .Meta.tags }}
+            <mark>{{ . }}</mark>
+          {{ end }}
+          <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        </li>
       {{ end }}
     {{ end }}
   </ul>
