--- a/templates/note.html
+++ b/templates/note.html
@@ -19,7 +19,12 @@
     <meta itemprop="name" content="Other notes">
     {{ range random 20 .Pages }}
       {{ if and (eq .Type "note") (not .Draft) }}
-        <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+        <li>
+          {{ range .Meta.tags }}
+            <mark>{{ . }}</mark>
+          {{ end }}
+          <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        </li>
       {{ end }}
     {{ end }}
   </ul>
